fix templates, add borrowing system

--- a/catalog/templates/catalog/author_detail.html
+++ b/catalog/templates/catalog/author_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ Author }}{% endblock %}
+{% block title %}Author | {{ author }}{% endblock %}
 
 {% block content %}
 
