--- a/catalog/templates/catalog/book_form.html
+++ b/catalog/templates/catalog/book_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Add Book{% endblock %}
+{% block title %}{% if 'update' in request.path %}Update{% else %}Add{% endif %} Book{% endblock %}
 
 {% block content %}
 <h3>Book</h3>
