--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -73,7 +73,7 @@
 
 
 
-      <form action="" method="post" class="form-inline my-2 my-lg-0">
+      <form action="{% url 'catalog:search' %}" method="get" class="form-inline my-2 my-lg-0">
         {% csrf_token %}
         <input name='searched' class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
