--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -32,7 +32,13 @@
             <a class="dropdown-item" href="{% url 'catalog:language-create' %}">Language</a>
           </div>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'chat:index' %}">Chat</a>
+        </li>
+
         {% endif %}
+        
 
 
 
