--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,18 +33,23 @@
           </div>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'chat:index' %}">Chat</a>
-        </li>
 
         {% endif %}
         
-
+        
 
 
         </ul>
 
         <ul class="navbar-nav ">
+
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'chat:index' %}">Chat</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'api-root' %}">Django REST framework</a>
+          </li>
+
           {% if request.user.is_authenticated %}
 
         <li class="nav-item dropdown">
